cabal-version:      2.4
name:               ourmud
version:            0.1.0.0
license:            BSD-3-Clause
author:             Chris Smith
maintainer:         cdsmith@gmail.com

extra-source-files: CHANGELOG.md

executable ourmud
    main-is:          Main.hs
    other-modules:    Model, Sample
    build-depends:    base, stm, uuid, aeson, bytestring, containers, text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-ambiguous-fields
